src/objects/FDPConfig__c.object
<CustomObject>
    <description>Config value for FDP</description>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value of the config</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FDP Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Value__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FDPConfig Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FDP Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>